--- a/newbie/styles.css
+++ b/newbie/styles.css
@@ -47,7 +47,7 @@ background: rgba(255,255,255,.8);
 * { box-sizing: border-box; }
 body {
   margin: 0;
-  background-color: #f5f5dc;
+  background-color: #f0f0f2;
   background-size: 10px 10px;
   font-family: 'Arial';
 }
