--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ html {
     overflow-x: hidden;
 }
 body {
+  position: relative;
   margin: 0;
   background-color: #f0f0f2;
   background-size: 10px 10px;
