--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ html {
     overflow-x: hidden;
 }
 body {
-  position: relative;
   margin: 0;
   background-color: #f0f0f2;
   background-size: 10px 10px;
@@ -264,7 +263,7 @@ display:block;
 background: rgba(255,255,255,.8);
 }
 .bold-mobile {
-  display: inline;
+  display: inline-block;
   font-weight: bold;
 }
 .textphone {
