--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,6 @@ and (max-device-width : 480px){ .showmobile { display: inline; }}
     position: absolute;
 }
 * { box-sizing: border-box; }
-html {
-    max-width: 100%;
-    overflow-x: hidden;
-}
 body {
   margin: 0;
   background-color: #f0f0f2;
@@ -263,11 +259,11 @@ display:block;
 background: rgba(255,255,255,.8);
 }
 .bold-mobile {
-  display: inline-block;
+  display: inline;
   font-weight: bold;
 }
 .textphone {
-  display: block;
+  display: inline;
   position: relative;
   top: -48px;
   right: -80px;
@@ -308,9 +304,10 @@ background: rgba(255,255,255,.8);
   display: none;
 }
 .textphone {
-  display: block;
+  display: inline;
   position: relative;
   top: -48px;
   right: -80px;
 }
 }
+
