--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ nav a {
   display: inline-block;
   position: relative;
 }
-.topmenu > li > a {
+.topmenu > li > .pcmenu-item {
   font-family: 'Exo 2', sans-serif;
   height: 70px;
   line-height: 70px;
@@ -255,6 +255,9 @@ font-style: bold;
 }
 .textphonemini {
   display: none;
+}
+.logo {
+  text-decoration: none;
 }
 .menu {
 display:none;
