--- a/stylesdark.css
+++ b/stylesdark.css
@@ -1,15 +1,15 @@
 a {
-  color: #000;
+  color: #ffffff;
 }
 .hyberlink {
   color: white;
 }
 .last {
-background-color: #fbf8f2;
-color: #000;
+  background-color: #1f1e1d;
+  color: #ffffff;
 }
 .last-razdelitel {
-background-color: #000;
+background-color: #ffffff;
 height: 2px;
 }
 button {
@@ -23,7 +23,6 @@ border-style: solid none;
 border-color: #FDBE33 #000 #D77206;
 border-radius: 6px;
 background: linear-gradient(#F3AE0F, #E38916) #E38916;
-
 } 
 button:hover { background: linear-gradient(#f5ae00, #f59500) #f5ae00; }
 button:active { background: linear-gradient(#f59500, #f5ae00) #f59500; }
@@ -103,17 +102,18 @@ color: #2b82c4;
 }
 * { box-sizing: border-box; }
 body {
-margin: 0;
-background-color: #fbf8f2;
-background-size: 10px 10px;
-font-family: 'Arial';
+  margin: 0;
+  background-color: #1f1e1d;
+  color: #ffffff;
+  background-size: 10px 10px;
+  font-family: 'Arial';
 }
 .search-button {
-  display: inline-block;
-  float: right;
-  position: relative;
-  right: 10px;
-  top: -73px;
+display: inline-block;
+float: right;
+position: relative;
+right: 10px;
+top: -73px;
 }
 .theme-pereklychatel {
   display: inline-block;
