--- a/stylesdark.css
+++ b/stylesdark.css
@@ -101,9 +101,11 @@ font-weight: bold;
 color: #2b82c4;
 }
 * { box-sizing: border-box; }
+html {
+  background-color: #1f1e1d;
+}
 body {
   margin: 0;
-  background-color: #1f1e1d;
   color: #ffffff;
   background-size: 10px 10px;
   font-family: 'Arial';
