--- a/stylesdark.css
+++ b/stylesdark.css
@@ -1,3 +1,9 @@
+h1, h2, h3, h4, h5 {
+font-family: 'Arial';
+}
+p {
+font-family: 'Times New Roman';
+}
 .modal {
     position: fixed; /* фиксированное положение */
     top: 0;
