--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+@font-face {
+  font-family: "TNR";
+  src:
+    url("/timesnewroman.ttf") format("ttf"),
+}
 h1, h2, h3, h4, h5 {
 font-family: 'Arial';
 }
 p {
-font-family: 'Times New Roman';
+font-family: 'TNR';
 }
 .modal {
     position: fixed; /* фиксированное положение */
