--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,154 @@
+
+h1, h2, h3, h4, h5 {
+font-family: 'Arial';
+}
+p {
+font-family: 'Times New Roman';
+}
+.modal {
+    position: fixed; /* фиксированное положение */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    background-color: #00a89b;
+    opacity: 0; /* по умолчанию модальное окно прозрачно */
+    -webkit-transition: opacity 200ms ease-in; 
+    -moz-transition: opacity 200ms ease-in;
+    transition: opacity 200ms ease-in; /* анимация перехода */
+    pointer-events: none; /* элемент невидим для событий мыши */
+    margin: 0;
+    padding: 0;
+}
+/* При отображении модального окно */
+.modal:target {
+    opacity: 1; /* делаем окно видимым */
+   pointer-events: auto; /* элемент видим для событий мыши */
+    overflow-y: auto; /* добавляем прокрутку по y, когда элемент не помещается на страницу */
+}
+/* ширина модального окна и его отступы от экрана */
+.modal-dialog {
+    position: relative;
+    width: 100%;
+}
+@media (min-width: 576px) {
+  .modal-dialog {
+
+  }
+}
+/* Стили для блока с контентом окна */ 
+.modal-content {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+}
+@media (min-width: 768px) {
+  .modal-content {
+      -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+      box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  }
+}
+/* Стили заголовка окна */
+.modal-header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 15px;
+    border-bottom: 1px solid #eceeef;
+}
+.modal-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: black;
+}
+/* Стили кнопки "х" ("Закрыть")  */
+.close {
+    float: right;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+    text-decoration: none;
+    color: red;
+}
+/* Стили для закрывающей кнопки в фокусе или наведении */
+.close:focus, .close:hover {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    opacity: .75;
+}
+/* Стили блока основного содержимого окна */
+.modal-body {
+  position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    overflow: auto;
+
+}
+
 a {
-    color: blue;
+  color: #000;
+}
+.hyberlink {
+  color: white;
+}
+.last {
+background-color: #fbf8f2;
+color: #000;
+}
+.last-razdelitel {
+background-color: #000;
+height: 2px;
 }
 button {
-  display: inline-block;
-  color: white;
-  text-decoration: none;
-  padding: .5em 2em;
-  outline: none;
-  border-width: 2px 0;
-  border-style: solid none;
-  border-color: #FDBE33 #000 #D77206;
-  border-radius: 6px;
-  background: linear-gradient(#F3AE0F, #E38916) #E38916;
-  transition: 0.2s;
+display: inline-block;
+color: white;
+text-decoration: none;
+padding: .5em 2em;
+outline: none;
+border-width: 2px 0;
+border-style: solid none;
+border-color: #FDBE33 #000 #D77206;
+border-radius: 6px;
+background: linear-gradient(#F3AE0F, #E38916) #E38916;
+
 } 
 button:hover { background: linear-gradient(#f5ae00, #f59500) #f5ae00; }
 button:active { background: linear-gradient(#f59500, #f5ae00) #f59500; }
 #title {
-   font-family: 'times';
+ font-family: 'times';
 }
 .showmobile { display: none; }
 @media only screen
@@ -25,223 +156,300 @@ and (min-device-width : 320px)
 and (max-device-width : 480px){ .showmobile { display: inline; }}
 @media screen and (max-width: 600px) {
 .hidemobile {
-    visibility: hidden;
-    display: none;
-  }
+  visibility: hidden;
+  display: none;
+}
 }
 #note {
-    z-index: 101;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: #10a536;
-    line-height: 2.5;
-    text-align: center;
-    line-height: 0.5;
-    overflow: hidden; 
-    position: absolute;
+  z-index: 101;
+  color: white;
+  background: #313338;
+  line-height: 2.5;
+  text-align: center;
+  line-height: 0.5;
+  overflow: hidden; 
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+#noteerr {
+  z-index: 101;
+  color: white;
+  background-color: red;
+  line-height: 2.5;
+  text-align: center;
+  line-height: 0.5;
+  overflow: hidden; 
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.notetext {
+  position: relative;
+  top: -2;
+}
+.sitename-12812 {
+display: inline;
+position: relative;
+top: -10px;
+}
+.element-12812 {
+display: inline;
+position: relative;
+right: -76px;
+top: -50px;
+}
+.avtor-pravo {
+text-align: right;
+position: relative;
+left: -9px;
+top: 13px;
+}
+#copyright {
+color: white;
+background-color: #2f2f2f;
+height: 300
+}
+.bottom-element {
+color: white;
+text-decoration: none;
+font-family: 'Sans-serif';
+font-weight: bold;
+}
+.bottom-element:hover {
+color: #2b82c4;
 }
 * { box-sizing: border-box; }
 body {
-  margin: 0;
-  background-color: #f0f0f2;
-  background-size: 10px 10px;
-  font-family: 'Arial';
+margin: 0;
+background-color: #fbf8f2;
+background-size: 10px 10px;
+font-family: 'Arial';
+}
+.search-button {
+  display: inline-block;
+  float: right;
+  position: relative;
+  right: 10px;
+  top: -74px;
+}
+.theme-pereklychatel {
+  display: inline-block;
+  float: right;
+  position: relative;
+  right: 21px;
+  top: -74px;
+  }
+.search-link {
+text-decoration: none;
 }
 nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+list-style: none;
+margin: 0;
+padding: 0;
 }
 nav a {
-  display: block;
-  text-decoration: none;
-  outline: none;
-  transition: .4s ease-in-out;
+display: block;
+text-decoration: none;
+outline: none;
 }
 .topmenu {
-  backface-visibility: hidden;
-  background: rgba(255,255,255,.8);
+backface-visibility: hidden;
+background-color: #2f2f2f;
+color: #ffffff;
 }
 .topmenu > li {
-  display: inline-block;
-  position: relative;
+display: inline-block;
+position: relative;
 }
-.topmenu > li > a {
-  font-family: 'Exo 2', sans-serif;
-  height: 70px;
-  line-height: 70px;
-  padding: 0 30px;
-  font-weight: bold;
-  color: #003559;
-  text-transform: uppercase;
+.topmenu > li > .pcmenu-item {
+font-family: 'Exo 2', sans-serif;
+height: 70px;
+line-height: 70px;
+padding: 0 30px;
+font-weight: bold;
+color: #ffffff;
+text-transform: uppercase;
+}
+.notetext {
+text-align: center;
 }
 .down:after {
-  content: "⬇️";
-  margin-left: 8px;
-  font-family: FontAwesome;
+content: " ";
+margin-left: 8px;
+font-family: FontAwesome;
 }
 .topmenu li a:hover { color: #E6855F; }
 .submenu {
-  background: white;
-  border: 2px solid #003559;
-  position: absolute;
-  left: 0;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 5;
-  width: 150px;
-  transform: perspective(600px) rotateX(-90deg);
-  transform-origin: 0% 0%;
-  transition: .6s ease-in-out;
+background: white;
+border: 2px solid #003559;
+position: absolute;
+left: 0;
+visibility: hidden;
+opacity: 0;
+z-index: 5;
+width: 150px;
+transform: perspective(600px) rotateX(-90deg);
+transform-origin: 0% 0%;
+transition: .6s ease-in-out;
 }
 .topmenu > li:hover .submenu{
-  visibility: visible;
-  opacity: 1;
-  transform: perspective(600px) rotateX(0deg);
+visibility: visible;
+opacity: 1;
+transform: perspective(600px) rotateX(0deg);
 }
 .submenu li a {
-  color: #7f7f7f;
-  font-size: 13px;
-  line-height: 36px;
-  padding: 0 25px;
-  font-family: 'Kurale', serif;
+color: #7f7f7f;
+font-size: 13px;
+line-height: 36px;
+padding: 0 25px;
+font-family: 'Kurale', serif;
 }
 #indbg {
 height: 600;
 border-color: #6d6d6d;
 }
 #citem {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-  overflow: hidden;
-  word-break: break-all;
-  font-family: sans-serif;
- 
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100vh;
+margin: 0;
+overflow: hidden;
+word-break: break-all;
+font-family: sans-serif;
+
 }
 #bgimg {
-  display: flex;
-  justify-content: center;
+display: flex;
+justify-content: center;
 
-  margin: 0;
+margin: 0;
 
-  font-family: sans-serif;
- 
-}
-.copyright {
- color: white;
- background-color: #323339;
- height: 300
+font-family: sans-serif;
+
 }
 .opencon {
-  color: #1DE81C;
-}
-#indbgs  {
-height: 300
-border-color: #6d6d6d;
-}
-#mc {
+color: #1DE81C;
 }
 .pcnav {
 background: rgba(255,255,255,.8);
 }
-.ital {
+
+
+.italic {
 font-style: italic;
-font-family: 'Arial';
 }
+.bold {
+font-style: bold;
+}
+.uluned {
+text-decoration: underline;
+}
+.croout {
+text-decoration: line-through;
+}
+.hash {
+display: none;
+}
+
+
 .bold-mobile {
-  display: none;
+display: none;
 }
 .burger-checkbox {
-  display:none;
-  position: absolute;
-  visibility: hidden;
+display:none;
+position: absolute;
+visibility: hidden;
 }
 .burger {
-  display:none;
-  left: 20px;
-  position: relative;
-  z-index: 1;
-  cursor: pointer;
-  position: relative;
-  border: none;
-  background: transparent;
-  width: 40px;
-  height: 26px;
+display:none;
+left: 20px;
+position: relative;
+z-index: 1;
+cursor: pointer;
+position: relative;
+border: none;
+background: transparent;
+width: 40px;
+height: 26px;
 }
 .textphone {
-  display: none;
+display: none;
 }
 .textphonemini {
-  display: none;
+display: none;
+}
+.logo {
+color: #fff;
+text-decoration: none;
 }
 .menu {
 display:none;
 }
 .burger::before,
 .burger::after {
-  content: '';
-  left: 0;
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 10px;
-  background: #000;
+content: '';
+left: 0;
+position: absolute;
+display: block;
+width: 100%;
+height: 4px;
+border-radius: 10px;
+background: #fff;
 }
 .burger::before {
-  top: 0;
-  box-shadow: 0 11px 0 #000;
-  transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
+top: 0;
+box-shadow: 0 11px 0 #fff;
+transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
 }
 .burger::after {
-  bottom: 0;
-  transition: bottom .3s .15s, transform .3s;
+bottom: 0;
+transition: bottom .3s .15s, transform .3s;
 }
 .burger-checkbox:checked + .burger::before {
-  top: 11px;
-  transform: rotate(45deg);
-  box-shadow: 0 6px 0 rgba(0,0,0,0);
-  transition: box-shadow .15s, top .3s, transform .3s .15s;
+top: 11px;
+transform: rotate(45deg);
+box-shadow: 0 6px 0 rgba(0,0,0,0);
+transition: box-shadow .15s, top .3s, transform .3s .15s;
 }
 .burger-checkbox:checked + .burger::after {
-  bottom: 11px;
-  transform: rotate(-45deg);
-  transition: bottom .3s, transform .3s .15s;
+bottom: 11px;
+transform: rotate(-45deg);
+transition: bottom .3s, transform .3s .15s;
 }
 .menu-list {
-  top: 0;
-  left: 0;
-  position: absolute;
-  display: grid;
-  gap: 12px;
-  padding: 42px 0;
-  margin: 0;
-  font-family: 'Kurale', serif;
-  background: white;
-  list-style-type: none;
-  transform: translateX(-100%);
-  transition: .3s;
-  width: 200px;
+top: 0;
+left: 0;
+position: absolute;
+display: grid;
+gap: 12px;
+padding: 42px 0;
+margin: 0;
+font-family: 'Kurale', serif;
+background: #2f2f2f;
+list-style-type: none;
+transform: translateX(-100%);
+transition: .3s;
+width: 200px;
 }
 .menu-item {
-  display: block;
-  padding: 8px;
-  color: #003559;
-  font-size: 18px;
-  text-align: center;
-  text-decoration: none;
+display: block;
+padding: 8px;
+color: #fff;
+font-size: 18px;
+text-align: center;
+text-decoration: none;
 }
 .menu-item:hover {
-  background: rgba(134, 134, 134, 1);
+background: rgba(134, 134, 134, 1);
 }
 .burger-checkbox:checked ~ .menu-list {
-  transform: translateX(0);
+transform: translateX(0);
 }
-@media screen and (max-width: 948px) {
+@media screen and (max-width: 1012px) {
 .topmenu {
 display:none;
 }
@@ -256,17 +464,27 @@ display:block;
 }
 .menu {
 display:block;
-background: rgba(255,255,255,.8);
+background-color: #2f2f2f;
+color: #ffffff;
 }
 .bold-mobile {
-  display: inline;
-  font-weight: bold;
+display: inline;
+font-weight: bold;
+color: #ffffff;
 }
 .textphone {
-  display: inline;
-  position: relative;
-  top: -48px;
-  right: -80px;
+display: inline;
+position: relative;
+top: -48px;
+right: -80px;
+}
+.search-button {
+right: 10px;
+top: -102px;
+}
+.theme-pereklychatel {
+  right: 21px;
+  top: -102px;
 }
 }
 .computer-show {
@@ -283,7 +501,7 @@ display:none;
 display:block;
 }
 }
-@media screen and (max-width: 241px) {
+@media screen and (max-width: 331px) {
 .topmenu {
 display:none;
 }
@@ -298,15 +516,24 @@ display:block;
 }
 .menu {
 display:block;
-background: rgba(255,255,255,.8);
+background-color: #2f2f2f;
+color: #ffffff;
 }
 .bold-mobile {
-  display: none;
+display: none;
 }
 .textphone {
-  display: inline;
-  position: relative;
-  top: -48px;
-  right: -80px;
+display: inline;
+position: relative;
+top: -48px;
+right: -80px;
+}
+}
+@media screen and (max-width: 281px) {
+.sitename-12812 {
+display: none;
+}
+.element-12812 {
+display: none;
 }
 }
